# circles

./: .gitignore  README.md  pyproject.toml
circles/: __main__.py  cv_helper.py  detection_test.py  exceptions.py  interpreter.py  main.py  parser.py  program.py
documentation/: 01 - The basics.md  01.md  02 - Your first program.md  02 - Your first programs.md  README.md
images/: README.md
src/: README.md
